fix: close three latent defects found while modernising for Java 25 (#10)
* refactor(anvil): close the deflater through try-with-resources

Deflater implements AutoCloseable as of JDK 24, so the manual finally which
called end can go. The deflater is declared first and the stream second, which
keeps the closing order the finally had: try-with-resources closes in reverse,
and DeflaterOutputStream.close still needs the deflater for its finish call.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* refactor: decide over enums exhaustively instead of silently

Four places mapped enum constants through a default branch, a ternary or an
if with a trailing return, so a constant added later would have been assigned
whatever the fallback happened to say. As switch expressions without a default
the compiler now rejects the omission. The behaviour for every constant which
exists today is unchanged, down to the exception types and their messages.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* fix: give the published exception types a serialVersionUID

Both types reach Serializable over Throwable but declared no identifier, so
the runtime derived one from the class structure and a failure crossing a
version boundary would have stopped deserialising after an unrelated edit.
Neither class carries instance fields of its own, which is what makes the
initial value the honest one.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* docs(instance): open the paragraph writeBlock only ever closed

The file held 44 opening against 45 closing tags. Doclint never complained
because it does not check private members, so the break only showed in the
editor preview.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* refactor(anvil): read the resolved registry once and hand out that copy

The double-checked locking is correct and stays as it is. Returning the field
a second time only left the non-null guarantee 